--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -1,27 +1,36 @@
-name: Build and Deploy
+name: Build and Deploy NextJS App to S3 and CloudFront
+
 on:
   push:
     branches:
-      - main
+      - dev
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   build-and-deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Node.js environment
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "20"
+          node-version: 16
+
+      - name: Install Yarn
+        run: npm install -g yarn
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
-      - name: Build and Export
-        run: npm run build && npm run export
+      - name: Build
+        run: yarn build
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -30,5 +39,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Sync to S3
-        run: aws s3 sync out/ s3://www.cea27.com
+      - name: Deploy to S3
+        run: aws s3 sync ./out s3://www.cea27.com
+
+      # - name: Invalidate CloudFront Cache
+      #   run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
