--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -21,8 +21,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm install, build, and test
         run: |
-          npm ci
+          npm install
           npm run build --if-present
+          npm run export
           npm test
       - name: Upload to S3
         uses: jakejarvis/s3-sync-action@master
