--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -25,7 +25,7 @@ jobs:
           npm run build --if-present
           npm run export
           npm test
-        working-directory: ./portfolio_cea/package.json
+        working-directory: ./portfolio_cea
       - name: Upload to S3
         uses: jakejarvis/s3-sync-action@master
         with:
