--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -19,11 +19,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           npm install
           npm run build --if-present
-          npm test
         working-directory: ./portfolio_cea
       - name: Upload to S3
         uses: jakejarvis/s3-sync-action@master
