--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload to S3
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: --acl public-read --follow-symlinks --delete
+          args: --follow-symlinks --delete
           path: "./portfolio_cea/out"
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
