--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "next": "^14.2.3"
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.10",
+    "next": "^14.2.3",
+    "tailwind-merge": "^2.3.0"
   }
 }
